# greex

./: .env  Cargo.toml  README.md  diesel.toml
backend/src/: Cargo.toml  main.rs
backend/src/api/: alert.rs  mod.rs
backend/src/db/: mod.rs
backend/src/models/: alert.rs
backend/src/notifications/: notifier.rs
backend/src/processors/: mod.rs
migrations/2024-05-31-093939_create_alerts/: down.sql  up.sql
src/: docker-compose.yml  main.rs  schema.rs
src/binance/: client.rs
src/db/: alert.rs  schema.rs
src/models/: alert.rs
src/processors/: alert_processor.rs
